# ccnx-dedup

./: .gitignore  Experiments.md  README.md  pyproject.toml
ccndedup/: dedup_manifest.py  deduper.py
ccndedup/core/: chunk_writer.py  chunker.py  file_chunk.py  hash_wrapper.py  memory_reader.py  structured_directory_writer.py
ccndedup/fastcdc/: fastcdc.py  gear.py
tests/: ccndup_testcase.py  mock_chunk_writer.py  test_dedup_manifest.py
tests/core/: test_structured_directory_writer.py
tests/fastcdc/: test_fastcdc.py  test_gear.py  test_hash_wrapper.py
workloads/: fetch.sh
