[project]
name = "ccndedup"
version = "0.1.0"
description = "deduplication with ccnx"
authors = [
    { name = "Marc Mosko", email = "marc@mosko.org" },
]
license = {text="Apache 2.0"}
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "ccnpy >= 0.1.4",
    "spooky >= 2.0.0",
    "pytest >= 8.3.3",
    "coverage >= 7.6.4"
]

[tool.poetry.group.dev.dependencies]
ccnpy = {path="../ccnpy", develop=true}

[tool.coverage.run]  
branch = true  
source = ["./ccndedup"]  
dynamic_context = "test_function" 

[tool.coverage.report]  
show_missing = true  
fail_under = 75

[tool.coverage.html]  
directory = "htmlcov"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
deduper  = "ccndedup.deduper:run"

